packages/tree-sitter-pywire/test/corpus/basic.txt
==============================
Structured brace block
==============================

{$if counter > 0}
  <p>Count is positive</p>
{/if}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))
    (tag
      name: (tag_name)
      (text)
      close_name: (tag_name))
    (end_brace_block
      name: (block_keyword))))





==============================
Auth block with policy
==============================

{$auth policy="AdminOnly"}
  <p>Admin only</p>
{/auth}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))
    (tag
      name: (tag_name)
      (text)
      close_name: (tag_name))
    (end_brace_block
      name: (block_keyword))))

==============================
Auth block with then branch
==============================

{$auth policy="AdminOnly"}
  <p>authorizing</p>
{$then allowed}
  <p>result</p>
{/auth}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))
    (tag
      name: (tag_name)
      (text)
      close_name: (tag_name))
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))
    (tag
      name: (tag_name)
      (text)
      close_name: (tag_name))
    (end_brace_block
      name: (block_keyword))))
