packages/tree-sitter-pywire/test/corpus/render_regions.txt
==============================
Snippet block
==============================

{$snippet row(item, i)}
  <li>{item}</li>
{/snippet}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))
    (tag
      name: (tag_name)
      (interpolation
        expr: (python_code))
      close_name: (tag_name))
    (end_brace_block
      name: (block_keyword))))

==============================
Render invocation (unpaired)
==============================

{$render row(item, 0)}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))))

==============================
Render with fallback (paired)
==============================

{$render row(item)}
  <li>no rows</li>
{/render}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword)
      expression: (python_code))
    (tag
      name: (tag_name)
      (text)
      close_name: (tag_name))
    (end_brace_block
      name: (block_keyword))))

==============================
Head teleport
==============================

{$head}
  <title>Page</title>
{/head}

---

(source_file
  (template_section
    (brace_block
      keyword: (block_keyword))
    (tag
      name: (tag_name)
      (text)
      close_name: (tag_name))
    (end_brace_block
      name: (block_keyword))))
